best gypsy man is KUNU

--- a/app/src/main/res/layout/activity_rogzites.xml
+++ b/app/src/main/res/layout/activity_rogzites.xml
@@ -31,7 +31,9 @@
             android:layout_height="wrap_content"
             android:hint="Jegy"
             android:id="@+id/jegy"
-            android:textColorHint="@color/white"/>
+            android:textColorHint="@color/white"
+            android:maxLength="1"
+            android:inputType="number"/>
 
         <Button
             android:layout_width="match_parent"
